<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lsep_msgs</name>
  <version>0.2.0</version>
  <description>
    Typed ROS 2 message definitions for LSEP (Luminae Signal Expression
    Protocol) — Signal plus Light/Sound/Motion modalities.
  </description>
  <maintainer email="info@experiencedesigninstitute.ch">Nemanja Galic</maintainer>
  <license>MIT</license>
  <url type="website">https://lsep.org</url>
  <url type="repository">https://github.com/NemanjaGalic/LSEP</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
