<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lsep_ros2</name>
  <version>0.2.0</version>
  <description>
    LSEP (Luminae Signal Expression Protocol) reference implementation for
    ROS 2 — managed lifecycle node, physics-based (TTC) state machine with
    time-aware hysteresis, RViz visualization, simulated demo.
  </description>
  <maintainer email="info@experiencedesigninstitute.ch">Nemanja Galic</maintainer>
  <license>MIT</license>
  <url type="website">https://lsep.org</url>
  <url type="repository">https://github.com/NemanjaGalic/LSEP</url>

  <depend>rclpy</depend>
  <depend>lsep_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
